# postech-dataviz-ibovespa

./: README.md  data.csv  dataviz.py  features.pkl  main.py  pyproject.toml  scaler.pkl
