[project]
name = "postecch-dataviz-ibovespa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "pandas-datareader>=0.10.0",
    "plotly==5.20.0",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "yfinance==1.0",
]
